fix [set vm args by different java version] Fix #1330